--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -8,16 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="shortcut icon" href="/static/favicon.ico">
+  <link rel="shortcut icon" href="/src/app/static/favicon.ico">
 
   <!-- HTML5 shim, for IE 6-8 support of HTML elements -->
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
-  <link rel="stylesheet/less" href="/static/css/main.less">
+  <link rel="stylesheet" href="/src/app/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/src/app/static/css/bootstrap-theme.min.css">
+  <link rel="stylesheet/less" href="/src/app/static/css/main.less">
   {% block css %}{% endblock %}
 
   <!-- Rather use `less.js` to dynamically compile your `stylesheet/less` files? -->
